{
  "version": 4,
  "terraform_version": "1.1.7",
  "serial": 48,
  "lineage": "704156fe-e329-1890-2161-7c631e561f75",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04893cdb768d0f9ee",
            "arn": "arn:aws:ec2:ap-south-1:274056015050:instance/i-0c024eb6cd68be7f3",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c024eb6cd68be7f3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "tf_key_pair",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-053dce7ea27acb8b5",
            "private_dns": "ip-10-0-10-113.ap-south-1.compute.internal",
            "private_ip": "10.0.10.113",
            "public_ip": "65.2.38.113",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0425f920937756c64",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09250f4e121e733a0",
            "tags": {
              "Name": "Terraform ec2 instance"
            },
            "tags_all": {
              "Name": "Terraform ec2 instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f27f5b247423c1e2"
            ]
          },
          "dependencies": [
            "aws_security_group.ec2-sg",
            "aws_subnet.subnet_vpc_1",
            "aws_vpc.vpc_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:274056015050:internet-gateway/igw-0e7e4d515e9ac6cd5",
            "id": "igw-0e7e4d515e9ac6cd5",
            "owner_id": "274056015050",
            "tags": {
              "Name": "igw_1"
            },
            "tags_all": {
              "Name": "igw_1"
            },
            "vpc_id": "vpc-0dfbc9d2911f6e526"
          },
          "dependencies": [
            "aws_vpc.vpc_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtb_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:274056015050:route-table/rtb-0405cc8e823c679cc",
            "id": "rtb-0405cc8e823c679cc",
            "owner_id": "274056015050",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e7e4d515e9ac6cd5",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rtb_1"
            },
            "tags_all": {
              "Name": "rtb_1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dfbc9d2911f6e526"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw_1",
            "aws_vpc.vpc_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rtb_assn",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ed3a93e7905f1122",
            "route_table_id": "rtb-0405cc8e823c679cc",
            "subnet_id": "subnet-09250f4e121e733a0"
          },
          "dependencies": [
            "aws_internet_gateway.igw_1",
            "aws_route_table.rtb_1",
            "aws_subnet.subnet_vpc_1",
            "aws_vpc.vpc_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:274056015050:security-group/sg-0f27f5b247423c1e2",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f27f5b247423c1e2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "43.247.156.79/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ec2-sg",
            "name_prefix": "",
            "owner_id": "274056015050",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "tf-ec2-sg"
            },
            "tags_all": {
              "Name": "tf-ec2-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dfbc9d2911f6e526"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_vpc_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:274056015050:subnet/subnet-09250f4e121e733a0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09250f4e121e733a0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "274056015050",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet_1"
            },
            "tags_all": {
              "Name": "subnet_1"
            },
            "vpc_id": "vpc-0dfbc9d2911f6e526"
          },
          "dependencies": [
            "aws_vpc.vpc_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:274056015050:vpc/vpc-0dfbc9d2911f6e526",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0781872bb4d1f77e8",
            "default_route_table_id": "rtb-00996be207086b65a",
            "default_security_group_id": "sg-07945227d4bb36139",
            "dhcp_options_id": "dopt-0fd9bb013c398e57c",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0dfbc9d2911f6e526",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00996be207086b65a",
            "owner_id": "274056015050",
            "tags": {
              "Name": "vpc_1"
            },
            "tags_all": {
              "Name": "vpc_1"
            }
          }
        }
      ]
    }
  ]
}